# Agentic_Researcher

./: .env.example  .gitignore  README.md  chatkit_app.py  chatkit_server.py  chatkit_store.py  guardrail.py  hooks.py  main.py  model.py  pyproject.toml  tool.py
UI/: index.html
core_agents/: main_agent.py  planner.py  researcher.py  writter.py
